aggiunta notebook per la pre elaborazione e per LSMT

--- a/Progetto/LSMT_V2/LSMT.ipynb
+++ b/Progetto/LSMT_V2/LSMT.ipynb
@@ -546,16 +546,16 @@
    "id": "3083506e",
    "metadata": {},
    "source": [
-    "#### Definizione Modello LSMT Autoencoder\n",
+    "#### Definizione Modello LSTM Autoencoder\n",
     "Qui viene descritta la costruzione della rete neurale vera e propria che sarà utilizzata per apprendere e, successivamente, rilevare le anomalie nelle traiettorie delle navi.  \n",
     "Il modello implementato è un Autoencoder Sequenziale basato su unità LSTM (Long Short-Term Memory).  \n",
     "L'obiettivo di un Autoencoder è imparare una rappresentazione compressa dei dati **il vettore latente** e poi ricostruire l'input originale dall'output.\n",
     "\n",
-    "1. La Fase di Codifica - **(Encoder)**\n",
+    "1. La Fase di Codifica **(Encoder)**\n",
     "\n",
     "   * **Input:** La rete accetta come input una finestra temporale (WINDOW_SIZE) con le nostre caratteristiche (**n_features**: Latitudine, Longitudine, SOG, COG).\n",
     "\n",
-    "   * **LSTM Encoder:** Lo strato LSTM prende la sequenza completa e la comprime. L'impostazione **return_sequences=False** è cruciale: significa che l'LSTM non restituisce una sequenza completa, ma solo l'ultimo stato nascosto. Questo stato è il vettore latente (latent_dim = 32), che rappresenta la versione compressa e concettuale dell'intera traiettoria di input.\n",
+    "   * **LSTM Encoder:** Lo strato LSTM prende la sequenza completa e la comprime. L'impostazione **return_sequences=False** è cruciale: significa che l'LSTM non restituisce una sequenza completa, ma solo l'ultimo stato nascosto. Questo stato è il vettore latente (latent_dim = 128), che rappresenta la versione compressa e concettuale dell'intera traiettoria di input.\n",
     "\n",
     "2. La Fase di Decodifica **(Decoder)**\n",
     "\n",
@@ -725,9 +725,9 @@
     "1. **Definizione dei Parametri di Training Ottimali**\n",
     "Prima di iniziare, vengono stabiliti i parametri di dimensione dell'epoca basati su test preliminari eseguiti sulla GPU **RTX 4050**:\n",
     "\n",
-    "   * **STEPS_PER_EPOCH_CALCOLATI (200.000):** Questo valore, ottenuto da analisi di benchmark sulla GPU, definisce la quantità di dati che il modello deve vedere per completare un'epoca. Questo numero è stato specificamente calibrato per far sì che ogni epoca duri circa 30 minuti.\n",
+    "   * **STEPS_PER_EPOCH_CALCOLATI (100.000):** Questo valore, ottenuto da analisi di benchmark sulla GPU, definisce la quantità di dati che il modello deve vedere per completare un'epoca. Questo numero è stato specificamente calibrato per far sì che ogni epoca duri circa 30 minuti.\n",
     "\n",
-    "   * **VALIDATION_STEPS_CALCOLATI (40.000):** Definisce quanti batch di dati di validazione verranno utilizzati al termine di ogni epoca per valutare le prestazioni su dati non visti.\n",
+    "   * **VALIDATION_STEPS_CALCOLATI (10.000):** Definisce quanti batch di dati di validazione verranno utilizzati al termine di ogni epoca per valutare le prestazioni su dati non visti.\n",
     "\n",
     "2. **Impostazione dei Callback per un Addestramento Robusto**\n",
     "\n",
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c4c05ffa",
    "metadata": {},
    "outputs": [
@@ -836,7 +836,7 @@
    ],
    "source": [
     "\n",
-    "# E' stato effetuato un test per capire le performance su RTX 4050 e delineare un numero di steps per epoca adeguato per completare un epoca in circa 30 minuti.\n",
+    "# È stato effetuato un test per capire le performance su RTX 4050 e delineare un numero di steps per epoca adeguato per completare un epoca in circa 30 minuti.\n",
     "\n",
     "STEPS_PER_EPOCH_CALCOLATI = 100000\n",
     "VALIDATION_STEPS_CALCOLATI = 10000\n",
