--- a/Progetto/LSMT_V2/Test_Kinematic_Inconsistency.ipynb
+++ b/Progetto/LSMT_V2/Test_Kinematic_Inconsistency.ipynb
@@ -385,10 +385,10 @@
     "Il codice genera un doppio istogramma che confronta le firme d'errore del modello quando elabora dati puliti e quando elabora dati compromessi.\n",
     "\n",
     "**Analisi dell'Output Grafico:** Il grafico \"Distribuzione Errore di Ricostruzione: Normali vs Attacchi\"  è la prova tangibile del successo del rilevatore:\n",
-    "  * **Distribuzione delle Traiettorie Normali (Verde):** La curva verde è estremamente concentrata vicino allo zero ($\\text{MAE} < 0.1$). Il picco principale si trova intorno allo $0.03$. Questo conferma che il modello LSTM Autoencoder ricostruisce le traiettorie normali con un errore quasi nullo. Questa è la baseline di normalità.\n",
-    "  * **Distribuzione delle Traiettorie Attaccate (Rosso):** La curva rossa è completamente separata dalla distribuzione normale. Inizia solo dopo $\\text{MAE} \\approx 0.7$. Il picco della distribuzione degli attacchi si trova tra $\\text{MAE} \\approx 0.8$ e $1.0$.L'enorme errore di ricostruzione (da 20 a 30 volte superiore alla media normale) dimostra che l'incoerenza fisica introdotta dall'attacco cinematico ha distrutto la capacità del modello di ricostruire la sequenza. Il modello ha \"capito\" che la traiettoria è fisicamente impossibile.\n",
+    "  * **Distribuzione delle Traiettorie Normali (Verde):** La curva verde è estremamente concentrata vicino allo zero ($\\text{MAE} < 0.1$). Il picco principale si trova intorno allo $0.01$. Questo conferma che il modello LSTM Autoencoder ricostruisce le traiettorie normali con un errore quasi nullo. Questa è la baseline di normalità.\n",
+    "  * **Distribuzione delle Traiettorie Attaccate (Rosso):** La curva rossa è completamente separata e distante dalla distribuzione normale. Inizia solo dopo $\\text{MAE} \\approx 0.75$. La distribuzione degli attacchi è più dispersa e presenta due picchi principali tra $\\text{MAE} 0.8$ e $1.1$. L'enorme errore di ricostruzione (da 80 a 100 volte superiore alla media normale) dimostra che l'incoerenza fisica introdotta dall'attacco cinematico ha distrutto la capacità del modello di ricostruire la sequenza. Il modello ha \"capito\" che la traiettoria è fisicamente impossibile.\n",
     "\n",
-    "La totale separazione tra le due distribuzioni è il risultato ottimale per un sistema di rilevamento. Questo significa che qualsiasi soglia scelta tra $\\text{MAE} = 0.2$ e $\\text{MAE} = 0.7$ (ad esempio, $\\text{Soglia}=0.4$) è sufficiente per separare perfettamente le traiettorie normali da quelle attaccate. Il modello ha un'alta differenziabilità tra le classi, rendendo il rilevamento altamente accurato e robusto.\n"
+    "La totale separazione tra le due distribuzioni (c'è un vuoto assoluto tra 0.05 e 0.75) è il risultato ottimale per un sistema di rilevamento."
    ]
   },
   {
@@ -438,21 +438,21 @@
     "    * Logica: La soglia di rilevamento **(THRESHOLD)** è definita statisticamente utilizzando gli errori di ricostruzione delle sole   traiettorie normali.\n",
     "    * **Regola del $3\\sigma$:** Si utilizza la regola della deviazione standard ($\\mathbf{3\\sigma}$), comune nei sistemi di rilevamento anomalie. La soglia viene impostata alla Media degli Errori Normali più tre volte la Deviazione Standard di tali errori.\n",
     "\n",
-    "Il **TRESHOLD** è di $\\mathbf{0.1385}$, che è molto più basso del $\\text{MAE}$ degli attacchi (che partiva da circa $0.7$), garantendo un'ottima separazione.\n",
+    "Il **TRESHOLD** è di $\\mathbf{0.0527}$, che è molto più basso del $\\text{MAE}$ degli attacchi, garantendo un'ottima separazione.\n",
     "\n",
     "2. **Classificazione e Calcolo delle Metriche**\n",
     "   * Viene eseguita la classificazione binaria: se l'errore $\\text{MAE}$ del campione supera la **THRESHOLD**, il sistema predice un Attacco (1); altrimenti, predice Normale (0).\n",
     "   * **Metriche Calcolate:** \n",
-    "     * $\\mathbf{Accuracy} \\approx 0.9937$ (99.37% di tutte le classificazioni sono corrette).\n",
-    "     * $\\mathbf{Precision} \\approx 0.9875$ (Quando il modello dice \"Attacco\", ha ragione nel 98.75% dei casi).\n",
+    "     * $\\mathbf{Accuracy} \\approx 0.9978$ (99.78% di tutte le classificazioni sono corrette).\n",
+    "     * $\\mathbf{Precision} \\approx 0.9957$ (Quando il modello dice \"Attacco\", ha ragione nel 99.57% dei casi).\n",
     "     * $\\mathbf{Recall} = 1.0000$ (Il modello ha trovato il 100% di tutti gli attacchi reali presenti nel set).\n",
-    "     * $\\mathbf{F1-Score} \\approx 0.9937$ (La media armonica di Precision e Recall, un ottimo indicatore della performance complessiva).\n",
+    "     * $\\mathbf{F1-Score} \\approx 0.9978$ (La media armonica di Precision e Recall, un ottimo indicatore della performance complessiva).\n",
     "\n",
     "3. **Analisi della Matrice di Confusione**\n",
-    "   * **True Positives (320,000):** Il modello ha identificato correttamente tutti i campioni che contenevano l'attacco cinematico.\n",
-    "   * **True Negatives (315,939):** Il modello ha classificato correttamente la stragrande maggioranza dei campioni normali.\n",
+    "   * **True Positives (128,000):** Il modello ha identificato correttamente tutti i campioni che contenevano l'attacco cinematico.\n",
+    "   * **True Negatives (127,441):** Il modello ha classificato correttamente la stragrande maggioranza dei campioni normali.\n",
     "   * **False Negatives (0):** Non c'è stato nessun falso negativo. \n",
-    "   * **False Positives (4,061):** Ci sono stati 4,061 falsi positivi (traiettorie normali classificate erroneamente come attacco). Questo corrisponde allo $\\mathbf{0.63\\%}$ dei campioni normali, in linea con l'aspettativa statistica di una soglia $3\\sigma$ (dove si aspetta che circa lo $0.3\\%$ cada fuori).\n"
+    "   * **False Positives (559):** Ci sono stati solo 559 falsi positivi (traiettorie normali classificate erroneamente come attacco). Questo corrisponde allo $\\mathbf{0.44\\%}$ dei campioni normali, in linea con l'aspettativa statistica di una soglia $3\\sigma$ (dove si aspetta che circa lo $0.3\\%$ cada fuori).\n"
    ]
   },
   {
