--- a/Progetto/LSMT_V2/Test_Silent_Drift.ipynb
+++ b/Progetto/LSMT_V2/Test_Silent_Drift.ipynb
@@ -355,13 +355,13 @@
     "#### Istogramma comparativo\n",
     "Il codice genera un doppio istogramma che confronta le distribuzioni di errore ($\\text{MAE}$) generate dal modello sul set misto:\n",
     "\n",
-    " * **Distribuzione Normale :** Come nelle analisi precedenti, gli errori sono estremamente concentrati vicino allo zero ($\\text{MAE} < 0.1$). Questo conferma la perfetta ricostruzione delle traiettorie pulite.\n",
+    " * **Distribuzione Normale :** Come nelle analisi precedenti, gli errori sono estremamente concentrati vicino allo zero ($\\text{MAE} < 0.05$). Questo conferma la perfetta ricostruzione delle traiettorie pulite.\n",
     "\n",
-    " * **Distribuzione Silent Drift:** Questa distribuzione è nettamente separata dalla distribuzione normale, ma a un livello di errore $\\text{MAE}$ inferiore rispetto all'attacco cinematico (il picco è attorno a $0.4$).\n",
+    " * **Distribuzione Silent Drift:** Questa distribuzione è nettamente separata dalla distribuzione normale, ma a un livello di errore $\\text{MAE}$ inferiore rispetto all'attacco cinematico (il picco è tra $0.3$ e $0.4$).\n",
     "\n",
-    " * Sebbene l'errore sia inferiore (poiché la deriva è graduale), il modello è stato comunque in grado di rilevare l'incoerenza. La distanza tra la curva verde e la curva rossa è ampia, indicando che la differenziabilità è eccellente.\n",
+    " * Nonostante l'anomalia sia più sottile, il modello l'ha comunque isolata perfettamente.\n",
     "\n",
-    "**Calcolo della Soglia Statistica**, che risulta essere uguale a $\\mathbf{0.1385}$\n"
+    "**Calcolo della Soglia Statistica**, che risulta essere uguale a $\\mathbf{0.0527}$\n"
    ]
   },
   {
@@ -416,16 +416,16 @@
     "1. **Classificazione e Calcolo delle Metriche**\n",
     "   * Viene eseguita la classificazione binaria: se l'errore $\\text{MAE}$ del campione supera la **THRESHOLD**, il sistema predice un Attacco (1); altrimenti, predice Normale (0).\n",
     "   * **Metriche Calcolate:** \n",
-    "     * $\\mathbf{Accuracy} \\approx 0.9937$ (99.37% di tutte le classificazioni sono corrette).\n",
-    "     * $\\mathbf{Precision} \\approx 0.9875$ (Quando il modello dice \"Attacco\", ha ragione nel 98.75% dei casi).\n",
+    "     * $\\mathbf{Accuracy} \\approx 0.9978$ (99.78% di tutte le classificazioni sono corrette).\n",
+    "     * $\\mathbf{Precision} \\approx 0.9957$ (Quando il modello dice \"Attacco\", ha ragione nel 99.57% dei casi).\n",
     "     * $\\mathbf{Recall} = 1.0000$ (Il modello ha trovato il 100% di tutti gli attacchi reali presenti nel set).\n",
-    "     * $\\mathbf{F1-Score} \\approx 0.9937$ (La media armonica di Precision e Recall, un ottimo indicatore della performance complessiva).\n",
+    "     * $\\mathbf{F1-Score} \\approx 0.9978$ (La media armonica di Precision e Recall, un ottimo indicatore della performance complessiva).\n",
     "\n",
     "2. **Analisi della Matrice di Confusione**\n",
-    "   * **True Positives (320,000):** Il modello ha identificato correttamente tutti i campioni che contenevano l'attacco Silent Drift.\n",
-    "   * **True Negatives (315,939):** Il modello ha classificato correttamente la stragrande maggioranza dei campioni normali.\n",
+    "   * **True Positives (128,000):** Il modello ha identificato correttamente tutti i campioni che contenevano l'attacco cinematico.\n",
+    "   * **True Negatives (127,441):** Il modello ha classificato correttamente la stragrande maggioranza dei campioni normali.\n",
     "   * **False Negatives (0):** Non c'è stato nessun falso negativo. \n",
-    "   * **False Positives (4,061):** Ci sono stati 4,061 falsi positivi (traiettorie normali classificate erroneamente come attacco). Questo corrisponde allo $\\mathbf{0.63\\%}$ dei campioni normali, in linea con l'aspettativa statistica di una soglia $3\\sigma$ (dove si aspetta che circa lo $0.3\\%$ cada fuori)."
+    "   * **False Positives (559):** Ci sono stati solo 559 falsi positivi (traiettorie normali classificate erroneamente come attacco). Questo corrisponde allo $\\mathbf{0.44\\%}$ dei campioni normali, in linea con l'aspettativa statistica di una soglia $3\\sigma$ (dove si aspetta che circa lo $0.3\\%$ cada fuori)."
    ]
   },
   {
