--- a/Progetto/Pre-Elaborazione Dati/Pulizia Data AIS.ipynb
+++ b/Progetto/Pre-Elaborazione Dati/Pulizia Data AIS.ipynb
@@ -2456,7 +2456,16 @@
    "id": "1ad86942",
    "metadata": {},
    "source": [
-    "##### Diagnosi del dataset per identificare gap all'interno delle traiettorie > 10 min"
+    "##### Diagnosi del dataset per identificare gap all'interno delle traiettorie > 10 min\n",
+    "Il codice, che utilizza la libreria Polars per l'alta velocità, esegue una diagnosi completa del dataset.\n",
+    "L'obiettivo è garantire che ogni singola traiettoria sia continua e sufficientemente lunga.\n",
+    "Il codice scorre tutti i file di dati e accumula le statistiche per ogni traiettoria unica, applicando poi due criteri di qualità:\n",
+    "\n",
+    "* **Regola del Gap Temporale (Continuità):**\n",
+    "   * Scarta le traiettorie dove il tempo tra due punti consecutivi supera il limite impostato (10 minuti). Questo assicura che il movimento registrato non abbia interruzioni significative.\n",
+    "\n",
+    "* **Regola della Lunghezza Minima:**\n",
+    "   * Scarta le traiettorie che hanno un numero totale di punti inferiore a un minimo specificato (30 righe). Questo garantisce che ci siano abbastanza dati per addestrare efficacemente il modello.\n"
    ]
   },
   {
@@ -2588,7 +2597,15 @@
    "id": "fe8bdd50",
    "metadata": {},
    "source": [
-    "##### Algoritmo di pulizia salti temporali e interpolazione per l'intero dataset"
+    "##### Pulizia Avanzata e Interpolazione per Serie Temporali Uniformi\n",
+    "Il codice funge da pipeline di trasformazione ad alta velocità per convertire i dati grezzi e irregolari delle traiettorie in un formato uniforme, continuo e pulito, essenziale per l'addestramento.\n",
+    "1. Il processo inizia con l'applicazione di filtri rigorosi per garantire la qualità:\n",
+    "   * Filtro Continuità: Le traiettorie con un gap temporale superiore a 10 minuti vengono scartate per assicurare che il movimento registrato sia continuo.\n",
+    "   * Uniformazione: I dati vengono consolidati e mappati su una griglia temporale, assegnando un punto ogni minuto (\"Snap-to-Grid\").\n",
+    "\n",
+    "2. Interpolazione dei Dati\n",
+    "\n",
+    "   * Interpolazione è una tecnica matematica che stima i valori mancanti (i \"buchi\") all'interno di un intervallo noto, basandosi sui punti vicini. Ad esempio, se manca il punto al minuto X, l'interpolazione calcola una posizione e velocità plausibili a partire dai minuti X-1 e X+1. Questo riempimento crea un vettore di dati omogeneo e continuo.\n"
    ]
   },
   {
@@ -2932,6 +2949,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e81bd90b",
+   "metadata": {},
+   "source": [
+    "#### Diagnosi dell'Integrità Temporale del Dataset\n",
+    "L'obiettivo è verificare se la fase precedente di consolidamento e interpolazione è riuscita a produrre traiettorie perfettamente uniformi, dove ogni punto è separato dal successivo da un intervallo di tempo esatto di 60 secondi."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "e922abf1",
@@ -3039,8 +3065,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "623c5095",
+   "metadata": {},
+   "source": [
+    "#### Diagnosi della Coerenza Temporale e Validazione della Struttura"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "cac9ba59",
    "metadata": {},
    "outputs": [
