--- a/Progetto/LSMT_V2/Test.ipynb
+++ b/Progetto/LSMT_V2/Test.ipynb
@@ -97,11 +97,9 @@
     "\n",
     "**Interpretazione Diagnostica:** Analizzando il grafico delle curve di apprendimento, possiamo trarre conclusioni dirette sull'efficacia del processo di training del nostro LSTM Autoencoder:\n",
     "\n",
-    "   * **Fase di Apprendimento Stabile (Epoche 0-12):** Nelle prime dodici epoche, la Training Loss (blu) e la Validation Loss (arancione) sono molto vicine tra loro, oscillando tra 0.02 e 0.08. Questa vicinanza indica che **il modello sta generalizzando bene:** l'errore sui dati non visti (Validation Loss) è quasi identico all'errore sui dati visti (Training Loss). **Il modello non sta memorizzando eccessivamente i dati di training.** \n",
-    "   **Il punto di migliore performance per entrambi gli errori è stato raggiunto all'Epoca 12**, dove la val_loss raggiunge il suo minimo (circa 0.03). Questo è il punto in cui il modello ha la massima capacità di ricostruire le traiettorie normali.\n",
+    "   * **Fase di Apprendimento Stabile (Epoche 0-9):** Nelle prime nove epoche, la Training Loss e la Validation Loss scendono regolarmente e rimangono molto vicine tra loro, stabilizzandosi su valori ottimali bassi (tra 0.01 e 0.06). Questa vicinanza indica che il modello sta generalizzando bene: non c'è overfitting. **Il punto di migliore performance (dove il modello \"best\" è stato salvato) si trova all'Epoca 9**, dove l'errore è al minimo assoluto.\n",
     "\n",
-    "   * **Rilevamento di Anomalie/Interruzione (Epoche 13-17):**\n",
-    "     A partire dall'Epoca 13, si verifica un incremento improvviso e drastico sia della Training Loss che della Validation Loss. L'errore passa da circa 0.03 a quasi 0.7. Qui entra in gioco l'**EarlyStopping** che ferma l'addestramento perchè non ci sono stati miglioramenti nelle ultime 5 epoche."
+    "   * **Divergenza e Interruzione (Epoche 10-13):** A partire dall'Epoca 10, si verifica un'anomalia tecnica (Gradient Explosion). L'errore subisce un'impennata verticale improvvisa, passando da circa 0.02 a oltre 0.60 in pochissime epoche. In questa fase il modello perde la sua stabilità. Fortunatamente, il meccanismo di `ModelCheckpoint` aveva già salvato la versione migliore (epoca 9) e **l'EarlyStopping** ha correttamente interrotto l'addestramento all'epoca 13, evitando di sovrascrivere il modello buono con quello \"rotto\"."
    ]
   },
   {
@@ -412,8 +410,8 @@
     "2. **Preparazione del Data generator**\n",
     "3. **Esecuzione della Valutazione**\n",
     "4. **Risultato e Implicazioni per il Rilevamento delle Anomalie**.  \n",
-    "  Dopo l'esecuzione della valutazione, abbiamo ottenuto il **$\\text{Mean Absolute Error (MAE) di } 0.03159$**.  \n",
-    "  Un $\\text{MAE}$ così basso e confrontabile con la Validation Loss minima vista nel grafico (circa 0.03) conferma che il modello ha generalizzato in modo eccellente. La capacità del modello di ricostruire sequenze normali sui dati mai visti è molto alta. Questo valore stabilisce la nostra soglia di base (baseline) per la normalità."
+    "  Dopo l'esecuzione della valutazione, abbiamo ottenuto il **$\\text{Mean Absolute Error (MAE) di } 0.01057$**.  \n",
+    "  Un $\\text{MAE}$ così basso e confrontabile con la Validation Loss minima vista nel grafico (circa 0.02) conferma che il modello ha generalizzato in modo eccellente. La capacità del modello di ricostruire sequenze normali sui dati mai visti è molto alta. Questo valore stabilisce la nostra soglia di base (baseline) per la normalità."
    ]
   },
   {
@@ -474,7 +472,7 @@
     "  Per l'analisi umana, i dati utilizzati dal modello vengono riportati alla loro scala originale (es. Latitudine in gradi, Velocità in nodi) applicando l'inverse_transform dello scaler.\n",
     "\n",
     "3. **Generazione del Grafico di Confronto:**\n",
-    "   * Viene creata una figura complessa che mostra il confronto tra la traiettoria Reale (GPS) e la traiettoria Ricostruita dall'AI.\n",
+    "   * Viene creata una figura complessa che mostra il confronto su 3 navi casuali, sovrapponendo la traiettoria Reale (GPS) e la traiettoria Ricostruita dall'AI.\n",
     "     \n",
     "    1. **Dinamica Velocità:**\n",
     "       * Il modello Ricostruito segue l'andamento della Reale con una buona fedeltà, anche se l'AI tende a produrre una curva più smussata e meno \"a gradino\" rispetto al dato grezzo reale. Questo è tipico degli Autoencoder che filtrano il rumore. L'errore di ricostruzione tra i due segnali è minimo.\n",
@@ -482,7 +480,7 @@
     "       * Similmente alla velocità, la Ricostruita segue la tendenza della Reale. Si notano delle discrepanze più marcate, ma nel complesso, l'AI riproduce con successo il range e la variazione della rotta della nave.\n",
     "\n",
     "4. **Conclusione Qualitativa**.  \n",
-    "  L'ispezione visiva di questo campione di successo convalida l'efficacia del training. L'Autoencoder ha imparato a ricostruire la dinamica delle traiettorie normali con un livello di errore molto basso.\n",
+    "  L'ispezione visiva di questi campioni di successo convalida l'efficacia del training. L'Autoencoder ha imparato a ricostruire la dinamica delle traiettorie normali con un livello di errore molto basso.\n",
     "\n"
    ]
   },
@@ -561,12 +559,12 @@
    "metadata": {},
    "source": [
     "### Definizione della Baseline: Distribuzione Statistica degli Errori di Ricostruzione\n",
-    "Questo codice esegue una simulazione statistica della performance del modello su un campione rappresentativo di dati normali (test_gen). L'obiettivo non è misurare un singolo $\\text{MAE}$ medio, ma capire come l'errore è distribuito quando il modello elabora migliaia di finestre temporali legittime.\n",
+    "Questo codice esegue una simulazione statistica della performance del modello su un campione rappresentativo di dati normali (`test_gen`). L'obiettivo non è misurare un singolo $\\text{MAE}$ medio, ma capire come l'errore è distribuito quando il modello elabora migliaia di finestre temporali legittime.\n",
     "\n",
     "1. **Calcolo Campionario dell'Errore (Simulazione)**\n",
-    "   * **Campionamento Esteso:** Invece di eseguire un unico model.evaluate() (che dà solo la media), il codice elabora 1000 batch di dati di test. Poiché ogni batch contiene 64 finestre temporali, questo campiona circa 64.000 finestre in totale.\n",
+    "   * **Campionamento Esteso:** Invece di eseguire un unico model.evaluate() (che dà solo la media), il codice elabora 100 batch di dati di test.\n",
     "   * **Calcolo dell'Errore per Sequenza:** Per ogni singola finestra temporale *(X_batch)*, viene calcolato l'errore assoluto medio ($\\text{MAE}$) tra l'input reale e la sua ricostruzione da parte del modello. Questo è l'errore che l'Autoencoder ha commesso per quella specifica traiettoria.\n",
-    "   * **Raccolta Dati:** Tutti i 64.000 errori individuali vengono raccolti nella lista `errori_normali`.\n",
+    "   * **Raccolta Dati:** Tutti gli errori individuali calcolati vengono raccolti nella lista `errori_normali`.\n",
     "\n",
     "2. **Generazione dell'Istogramma di Distribuzione**\n",
     "Il codice utilizza la libreria **Seaborn** per visualizzare questa grande raccolta di errori sotto forma di istogramma e densità (la curva verde continua):\n",
@@ -576,13 +574,13 @@
     "3. **Analisi dell'Output Grafico (Baseline)**\n",
     "Il grafico **\"Distribuzione dell'Errore su Dati Normali (Baseline)\"** rivela la firma statistica della normalità:\n",
     "   * **Forma della Distribuzione:** La curva è fortemente asimmetrica e concentrata a sinistra, con un picco molto alto vicino allo zero. Questa forma è ideale, perché indica che la stragrande maggioranza delle traiettorie normali viene ricostruita con un errore estremamente basso.\n",
-    "   * **Media e Baseline:** La linea rossa tratteggiata identifica la media degli errori di ricostruzione, che è stata calcolata come:$$\\text{Media degli Errori Normali: } 0.0171$$\n",
+    "   * **Media e Baseline:** La linea rossa tratteggiata identifica la media degli errori di ricostruzione, che è stata calcolata come:$$\\text{Media degli Errori Normali: } 0.0057$$\n",
     "   * **Rilevamento Anomalie:** Il punto cruciale di questa analisi è la definizione della soglia. Dato che la quasi totalità degli errori normali si concentra sotto un certo valore, possiamo scegliere una soglia per definire l'anomalia."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "f7ecbc26",
    "metadata": {},
    "outputs": [
@@ -608,7 +606,7 @@
     "print(\"Calcolo distribuzione errori su campione statistico...\")\n",
     "errori_normali = []\n",
     "\n",
-    "for _ in range(100): #Analizzo 1000 batch\n",
+    "for _ in range(100): #Analizzo 100 batch\n",
     "    X_batch, _ = next(test_gen)\n",
     "    pred = model.predict(X_batch, verbose=0)\n",
     "    mae = np.mean(np.abs(X_batch - pred), axis=(1, 2))\n",
@@ -638,7 +636,7 @@
     "Il primo set di grafici confronta il Valore Reale di una caratteristica con il Valore Predetto (Ricostruito) dal modello per ogni singolo punto dati all'interno del batch. \n",
     "    * **Processo:** I valori di Velocità ($\\text{SOG}$) e Rotta ($\\text{COG}$) di tutte le sequenze del batch vengono \"appiattiti\" in un unico array e tracciati uno contro l'altro. La linea rossa tratteggiata rappresenta la Perfetta Corrispondenza ($y=x$), dove il valore ricostruito è identico al valore reale.\n",
     "    * **Correlazione Velocità ($\\text{SOG}$):** I punti blu sono quasi perfettamente allineati lungo la linea rossa.Questo significa che, se il valore reale della velocità in un dato istante è X, il modello lo ricostruisce con una precisione estremamente alta. Questo conferma che l'Encoder e il Decoder hanno imparato la rappresentazione intrinseca della dinamica della velocità.\n",
-    "    * **Correlazione Rotta ($\\text{COG}$):** Anche qui, i punti verdi sono fortemente concentrati sulla linea rossa. Si osserva una leggera dispersione maggiore rispetto alla velocità, soprattutto ai valori estremi (vicino a $-0.5$ e $0.1$ normalizzati), ma la correlazione complessiva è eccellente.\n",
+    "    * **Correlazione Rotta ($\\text{COG}$):** Anche qui, i punti verdi sono fortemente concentrati sulla linea rossa. Si osserva una leggera dispersione maggiore rispetto alla velocità, soprattutto ai valori estremi della scala, ma la correlazione complessiva è eccellente.\n",
     "    * **Conclusione:** La forte correlazione visibile su entrambi i grafici è una prova definitiva della validità del modello, confermando che l'errore basso ($\\text{MAE} \\approx 0.03$) non è dovuto a una media fortuita, ma a una ricostruzione accurata punto per punto.\n",
     "\n",
     "2. **Stabilità della Ricostruzione nel Tempo (MAE per Step)** \n",
@@ -741,7 +739,7 @@
     "Questa sezione serve a verificare il successo del processo di codifica. L'Autoencoder è efficace se l'Encoder riesce a mappare traiettorie simili tra loro in punti vicini nello spazio latente, mentre traiettorie diverse finiscono in punti distanti.\n",
     "\n",
     "1. **Estrazione dei Vettori Latenti**\n",
-    "   * **Creazione del Modello Encoder:** Viene creato un nuovo modello `encoder_model` che prende gli stessi input della rete completa, ma **la cui uscita è impostata sullo strato LSTM Encoder** (il secondo strato della rete). Questo ci permette di ispezionare direttamente il vettore latente a 32 dimensioni **(l'informazione compressa)**.\n",
+    "   * **Creazione del Modello Encoder:** Viene creato un nuovo modello `encoder_model` che prende gli stessi input della rete completa, ma **la cui uscita è impostata sullo strato LSTM Encoder** (il secondo strato della rete). Questo ci permette di ispezionare direttamente il vettore latente a 128 dimensioni **(l'informazione compressa)**.\n",
     "   * **Campionamento:** Vengono accumulate e processate centinaia di finestre temporali dal `test_gen` per ottenere un ampio campione di vettori latenti `latent_vectors`.\n",
     "\n",
     "2. **Calcolo delle Caratteristiche Fisiche Rilevanti**. \n",
@@ -749,7 +747,7 @@
     "   * **Velocità Media:** La media della Velocità su Terra ($\\text{SOG}$) lungo i 30 timestep.\n",
     "   * **Intensità di Virata:** La deviazione standard della Rotta su Terra ($\\text{COG}$) lungo i 30 timestep. Una deviazione standard alta indica una manovra complessa; una bassa indica una rotta dritta.\n",
     "\n",
-    "3. **Riduzione della Dimensionalità e Visualizzazione.** Per il plotting, viene utilizzata l'Analisi delle Componenti Principali ($\\text{PCA}$). La $\\text{PCA}$ riduce matematicamente i 32 valori alla seconda dimensione più informativa (Componente Principale 1 e Componente Principale 2), preservando il più possibile la loro struttura originale.\n",
+    "3. **Riduzione della Dimensionalità e Visualizzazione.** Per il plotting, viene utilizzata l'Analisi delle Componenti Principali ($\\text{PCA}$). La $\\text{PCA}$ riduce matematicamente i 128 valori alla seconda dimensione più informativa (Componente Principale 1 e Componente Principale 2), preservando il più possibile la loro struttura originale.\n",
     "4. **Analisi dell'Output Grafico**\n",
     "I due grafici tracciano i punti $\\text{PCA}$ (le traiettorie) nello stesso spazio 2D, ma li colorano in base a una metrica fisica esterna:\n",
     "   * **Grafico 1:** *Organizzato per Velocità* dove i punti sono colorati in base alla Velocità Media (da viola scuro per le lente a giallo brillante per le veloci). Il grafico mostra che lo spazio latente è organizzato con le **navi lente(viola/blu)** si raggruppano in certe aree (es. a sinistra), mentre **le navi veloci (giallo/verde)** si raggruppano in altre (es. a destra). La transizione è graduale e coerente. Notiamo che l'Encoder ha imparato a distinguere la Velocità come una caratteristica discriminante e ha assegnato le traiettorie in base alla loro dinamica di velocità.\n",
@@ -759,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "4e7a17ca",
    "metadata": {},
    "outputs": [
@@ -778,7 +776,7 @@
     "encoder_model = Model(inputs=model.input, outputs=model.layers[1].output)\n",
     "\n",
     "X_batch_latent, _ = next(test_gen) \n",
-    "for _ in range(100): # Accumuliamo circa 1000 campioni\n",
+    "for _ in range(100): # Accumuliamo circa 100 campioni\n",
     "    b, _ = next(test_gen)\n",
     "    X_batch_latent = np.concatenate([X_batch_latent, b])\n",
     "\n",
@@ -847,7 +845,7 @@
     "\n",
     "   * **Risultati e Interpretazione:**\n",
     "\n",
-    "     * **Filtro del Rumore:** Si osserva che la Ricostruzione del Modello (rossa) non cerca di seguire il rumore blu sparso, ma si allinea con l'andamento del segnale Reale Pulito (verde), posizionandosi molto vicina ad esso.\n",
+    "     * **Filtro del Rumore:** Si osserva che la Ricostruzione del Modello (rossa) riesce con successo a ignorare il caos dei punti blu sparsi. Invece di zigzagare tra i punti, l'AI produce una traiettoria lineare e continua. Questo conferma che l'Autoencoder ha imparato la \"fisica\" della nave: sa che una nave non può teletrasportarsi casualmente come i punti blu.\n",
     "\n",
     "     * **Generalizzazione Funzionale:** Poiché il modello è stato addestrato per apprendere la struttura fondamentale del movimento e non il rumore casuale, l'Encoder ignora i dati incoerenti e il Decoder si sforza di ricostruire la traiettoria che assomiglia di più a quelle che ha visto durante il training."
    ]
