LNN_V2 mancano solo alcuni test nuovi per trovare treshold minimo per entrambe le reti

--- a/Progetto/LNN_V2/LNN.ipynb
+++ b/Progetto/LNN_V2/LNN.ipynb
@@ -5,7 +5,7 @@
    "id": "db3be638",
    "metadata": {},
    "source": [
-    "## LNN Versione 2 Addestramento"
+    "## LNN Addestramento"
    ]
   },
   {
@@ -63,12 +63,12 @@
     "\n",
     "\n",
     "# PATH\n",
-    "INPUT_DIR = '../Pre-Elaborazione Dati/Dataset' \n",
+    "INPUT_DIR = '../Pre-Elaborazione Dati/Dataset_Ready_For_AI_FINAL' \n",
     "SCALER_PATH = 'scaler.joblib' \n",
     "COLONNE_FEATURES = ['Latitude', 'Longitude', 'SOG', 'COG']\n",
     "\n",
     "WINDOW_SIZE = 30  \n",
-    "BATCH_SIZE = 64 \n",
+    "BATCH_SIZE = 256 \n",
     "\n",
     "all_files = sorted(glob.glob(os.path.join(INPUT_DIR, '*.parquet')))\n",
     "TRAIN_FILES = all_files[0:16]\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f2c48d89",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "205196ed",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "13a65588",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
      "output_type": "stream",
      "text": [
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "I0000 00:00:1764265362.146125  374329 gpu_device.cc:2020] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 3945 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 4050 Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.9\n"
+      "I0000 00:00:1764548749.777508   60004 gpu_device.cc:2020] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 4130 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 4050 Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.9\n"
      ]
     },
     {
@@ -291,109 +291,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1ca56dcc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/25\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0000 00:00:1764548770.743326   60086 device_compiler.h:196] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.1455\n",
+      "Epoch 1: val_loss improved from inf to 0.08676, saving model to lnn_autoencoder_best.weights.h5\n",
+      "40000/40000 [==============================] - 4051s 101ms/step - loss: 0.1455 - val_loss: 0.0868\n",
+      "Epoch 2/25\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0572\n",
+      "Epoch 2: val_loss improved from 0.08676 to 0.04938, saving model to lnn_autoencoder_best.weights.h5\n",
+      "40000/40000 [==============================] - 4022s 101ms/step - loss: 0.0572 - val_loss: 0.0494\n",
+      "Epoch 3/25\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0342\n",
+      "Epoch 3: val_loss improved from 0.04938 to 0.02213, saving model to lnn_autoencoder_best.weights.h5\n",
+      "40000/40000 [==============================] - 4007s 100ms/step - loss: 0.0342 - val_loss: 0.0221\n",
+      "Epoch 4/25\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0232\n",
+      "Epoch 4: val_loss improved from 0.02213 to 0.02159, saving model to lnn_autoencoder_best.weights.h5\n",
+      "40000/40000 [==============================] - 3983s 100ms/step - loss: 0.0232 - val_loss: 0.0216\n",
+      "Epoch 5/25\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0186\n",
+      "Epoch 5: val_loss improved from 0.02159 to 0.01976, saving model to lnn_autoencoder_best.weights.h5\n",
+      "40000/40000 [==============================] - 3974s 99ms/step - loss: 0.0186 - val_loss: 0.0198\n",
+      "Epoch 6/25\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0317\n",
+      "Epoch 6: val_loss did not improve from 0.01976\n",
+      "40000/40000 [==============================] - 3957s 99ms/step - loss: 0.0317 - val_loss: 0.0303\n",
+      "Epoch 7/25\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0266\n",
+      "Epoch 7: val_loss did not improve from 0.01976\n",
+      "40000/40000 [==============================] - 3943s 99ms/step - loss: 0.0266 - val_loss: 0.0275\n",
+      "Epoch 8/25\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0229\n",
+      "Epoch 8: val_loss did not improve from 0.01976\n",
+      "40000/40000 [==============================] - 3927s 98ms/step - loss: 0.0229 - val_loss: 0.0245\n",
+      "Epoch 9/25\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0184\n",
+      "Epoch 9: val_loss improved from 0.01976 to 0.01775, saving model to lnn_autoencoder_best.weights.h5\n",
+      "40000/40000 [==============================] - 3922s 98ms/step - loss: 0.0184 - val_loss: 0.0177\n",
+      "Epoch 10/25\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0160\n",
+      "Epoch 10: val_loss improved from 0.01775 to 0.01392, saving model to lnn_autoencoder_best.weights.h5\n",
+      "40000/40000 [==============================] - 3921s 98ms/step - loss: 0.0160 - val_loss: 0.0139\n",
+      "Epoch 11/25\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0129\n",
+      "Epoch 11: val_loss did not improve from 0.01392\n",
+      "40000/40000 [==============================] - 3878s 97ms/step - loss: 0.0129 - val_loss: 0.0156\n",
+      "Epoch 12/25\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0124\n",
+      "Epoch 12: val_loss improved from 0.01392 to 0.01105, saving model to lnn_autoencoder_best.weights.h5\n",
+      "40000/40000 [==============================] - 3880s 97ms/step - loss: 0.0124 - val_loss: 0.0110\n",
+      "Epoch 13/25\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0103\n",
+      "Epoch 13: val_loss improved from 0.01105 to 0.00759, saving model to lnn_autoencoder_best.weights.h5\n",
+      "40000/40000 [==============================] - 3874s 97ms/step - loss: 0.0103 - val_loss: 0.0076\n",
+      "Epoch 14/25\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0090\n",
+      "Epoch 14: val_loss improved from 0.00759 to 0.00730, saving model to lnn_autoencoder_best.weights.h5\n",
+      "40000/40000 [==============================] - 3875s 97ms/step - loss: 0.0090 - val_loss: 0.0073\n",
+      "Epoch 15/25\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0085\n",
+      "Epoch 15: val_loss did not improve from 0.00730\n",
+      "40000/40000 [==============================] - 3892s 97ms/step - loss: 0.0085 - val_loss: 0.0087\n",
+      "Epoch 16/25\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0219\n",
+      "Epoch 16: val_loss did not improve from 0.00730\n",
+      "40000/40000 [==============================] - 3934s 98ms/step - loss: 0.0219 - val_loss: 0.0137\n",
+      "Epoch 17/25\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0173\n",
+      "Epoch 17: val_loss did not improve from 0.00730\n",
+      "40000/40000 [==============================] - 3909s 98ms/step - loss: 0.0173 - val_loss: 0.0299\n",
+      "Epoch 18/25\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 1.7113\n",
+      "Epoch 18: val_loss did not improve from 0.00730\n",
+      "40000/40000 [==============================] - 4069s 102ms/step - loss: 1.7113 - val_loss: 1.7778\n",
+      "Epoch 19/25\n",
+      "  372/40000 [..............................] - ETA: 1:33:43 - loss: 1.8688\n",
+      "Interrotto manualmente.\n"
+     ]
+    }
+   ],
    "source": [
-    "SCALER_PATH = 'scaler.joblib' \n",
-    "\n",
-    "try:\n",
-    "    if os.path.exists(SCALER_PATH):\n",
-    "        print(f\"Caricamento parametri fisici da {SCALER_PATH}...\")\n",
-    "        scaler = joblib.load(SCALER_PATH)\n",
-    "        \n",
-    "        MEAN_LAT, STD_LAT = scaler.mean_[0], scaler.scale_[0]\n",
-    "        MEAN_LON, STD_LON = scaler.mean_[1], scaler.scale_[1]\n",
-    "        MEAN_SOG, STD_SOG = scaler.mean_[2], scaler.scale_[2]\n",
-    "        MEAN_COG, STD_COG = scaler.mean_[3], scaler.scale_[3]\n",
-    "        \n",
-    "        print(\"Scaler letto correttamente per la LNN.\")\n",
-    "    else:\n",
-    "        raise FileNotFoundError(\"File scaler non trovato.\")\n",
-    "except Exception as e:\n",
-    "    print(f\"Errore lettura Scaler: {e}. Uso default.\")\n",
-    "    MEAN_LAT, STD_LAT = 44.0, 1.0\n",
-    "    MEAN_LON, STD_LON = 9.0, 1.0\n",
-    "    MEAN_SOG, STD_SOG = 10.0, 5.0\n",
-    "    MEAN_COG, STD_COG = 180.0, 90.0\n",
-    "\n",
-    "\n",
-    "# DEFINIZIONE LOSS IBRIDA\n",
-    "\n",
-    "def physics_informed_loss(y_true, y_pred):\n",
-    "    y_true = tf.cast(y_true, tf.float32)\n",
-    "    y_pred = tf.cast(y_pred, tf.float32)\n",
-    "    \n",
-    "    # Dati\n",
-    "    lat_true, lon_true = y_true[:, :, 0], y_true[:, :, 1]\n",
-    "    sog_true, cog_true = y_true[:, :, 2], y_true[:, :, 3]\n",
-    "    lat_pred, lon_pred = y_pred[:, :, 0], y_pred[:, :, 1]\n",
-    "    sog_pred, cog_pred = y_pred[:, :, 2], y_pred[:, :, 3]\n",
-    "    \n",
-    "    # MSE Ancoraggio (GPS) - Peso x2 sulla posizione\n",
-    "    mse_pos = tf.reduce_mean(tf.square(lat_true - lat_pred) + tf.square(lon_true - lon_pred))\n",
-    "    mse_dyn = tf.reduce_mean(tf.square(sog_true - sog_pred) + tf.square(cog_true - cog_pred))\n",
-    "    data_loss = 2.0 * mse_pos + 1.0 * mse_dyn\n",
-    "\n",
-    "    # Fisica (Dead Reckoning)\n",
-    "    d_lat_net = (lat_pred[:, 1:] - lat_pred[:, :-1]) * STD_LAT\n",
-    "    d_lon_net = (lon_pred[:, 1:] - lon_pred[:, :-1]) * STD_LON\n",
-    "    \n",
-    "    pred_sog_real = (sog_pred[:, :-1] * STD_SOG) + MEAN_SOG\n",
-    "    pred_cog_deg = (cog_pred[:, :-1] * STD_COG) + MEAN_COG\n",
-    "    pred_cog_rad = pred_cog_deg * 0.0174533\n",
-    "    \n",
-    "    K = 0.00032410 \n",
-    "    \n",
-    "    d_lat_phys = (pred_sog_real * K) * tf.cos(pred_cog_rad)\n",
-    "    d_lon_phys = (pred_sog_real * K) * tf.sin(pred_cog_rad)\n",
-    "    \n",
-    "    physics_error = tf.reduce_mean(tf.square(d_lat_net - d_lat_phys) + tf.square(d_lon_net - d_lon_phys))\n",
-    "\n",
-    "    return data_loss + 0.5 * physics_error\n",
-    "\n",
-    "\n",
-    "# CONFIGURAZIONE TRAINING LNN\n",
-    "\n",
     "STEPS_PER_EPOCH_LNN = 40000 \n",
     "VALIDATION_STEPS_LNN = 8000 \n",
-    "EPOCHS_LNN = 40 \n",
+    "EPOCHS_LNN = 25\n",
     "\n",
-    "# Learning Rate Schedule (Cosine Decay)\n",
     "initial_learning_rate = 0.0005  \n",
+    "T_0 = 5\n",
     "lr_schedule = CosineDecayRestarts(\n",
     "    initial_learning_rate,\n",
-    "    first_decay_steps=5 * STEPS_PER_EPOCH_LNN,\n",
+    "    first_decay_steps=T_0 * STEPS_PER_EPOCH_LNN,\n",
     "    t_mul=2.0,                  \n",
     "    m_mul=0.9,                  \n",
-    "    alpha=1e-6\n",
+    "    alpha=1e-6 # LR minimo\n",
     ")\n",
     "\n",
-    "optimizer_lnn_final = Adam(learning_rate=lr_schedule, clipvalue=0.5)\n",
+    "# OTTIMIZZATORE\n",
+    "optimizer_lnn_final = Adam(\n",
+    "    learning_rate=lr_schedule, \n",
+    "    clipvalue=0.5             \n",
+    ")\n",
     "\n",
-    "print(\"Compilazione LNN con Hybrid Physics Loss\")\n",
-    "model_lnn.compile(optimizer=optimizer_lnn_final, loss=physics_informed_loss)\n",
+    "model_lnn.compile(optimizer=optimizer_lnn_final, loss='mae')\n",
     "\n",
-    "# CALLBACKS\n",
+    "#CALLBACKS\n",
     "checkpoint = ModelCheckpoint(\n",
     "    'lnn_autoencoder_best.weights.h5',\n",
     "    monitor='val_loss',\n",
     "    save_best_only=True,     \n",
     "    mode='min',\n",
     "    verbose=1,\n",
-    "    save_weights_only=True\n",
+    "    save_weights_only=True # Salva solo i pesi numerici\n",
     ")\n",
     "\n",
     "early_stopping = EarlyStopping(\n",
-    "    monitor='val_loss', patience=7, mode='min', verbose=1, restore_best_weights=True\n",
+    "    monitor='val_loss', patience=10, mode='min', verbose=1, restore_best_weights=True\n",
     ")\n",
     "\n",
-    "csv_logger = CSVLogger('training_log_lnn.csv', append=True)\n",
+    "csv_logger = tf.keras.callbacks.CSVLogger('training_log_lnn.csv', append=True)\n",
     "\n",
-    "# START TRAINING\n",
+    "# START\n",
     "try:\n",
-    "    print(\"Avvio Addestramento LNN\")\n",
     "    history_lnn = model_lnn.fit(\n",
     "        train_gen,\n",
     "        steps_per_epoch=STEPS_PER_EPOCH_LNN,\n",
