--- a/Progetto/LNN_V2/Test_Kinematic_Inconcistency.ipynb
+++ b/Progetto/LNN_V2/Test_Kinematic_Inconcistency.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "62e92c6d",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "f3f8e663",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ricostruzione LNN\n",
+      "Ricostruzione LNN\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "I0000 00:00:1764679573.640352   44866 gpu_device.cc:2020] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 3521 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 4050 Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Pesi LNN caricati.\n"
      ]
     }
